--- a/results/jest-stare/index.html
+++ b/results/jest-stare/index.html
@@ -156,7 +156,7 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1762245947609,
+  &quot;startTime&quot;: 1762330889878,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [
     {
@@ -167,10 +167,10 @@
       &quot;numTodoTests&quot;: 0,
       &quot;openHandles&quot;: [],
       &quot;perfStats&quot;: {
-        &quot;end&quot;: 1762245947740,
-        &quot;runtime&quot;: 88,
+        &quot;end&quot;: 1762330889977,
+        &quot;runtime&quot;: 71,
         &quot;slow&quot;: false,
-        &quot;start&quot;: 1762245947652
+        &quot;start&quot;: 1762330889906
       },
       &quot;skipped&quot;: false,
       &quot;snapshot&quot;: {
@@ -218,7 +218,7 @@
       &quot;failureMessage&quot;: null
     },
     {
-      &quot;failureMessage&quot;: &quot;  \u001b[1m● \u001b[22mTest suite failed to run\n\n    ReferenceError: title is not defined\n\n    \u001b[0m \u001b[90m 13 |\u001b[39m }\u001b[0m\n    \u001b[0m \u001b[90m 14 |\u001b[39m\u001b[0m\n    \u001b[0m\u001b[31m\u001b[1m&gt;\u001b[22m\u001b[39m\u001b[90m 15 |\u001b[39m module\u001b[33m.\u001b[39mexports \u001b[33m&#x3D;\u001b[39m fetchFilm(title)\u001b[0m\n    \u001b[0m \u001b[90m    |\u001b[39m                            \u001b[31m\u001b[1m^\u001b[22m\u001b[39m\u001b[0m\n\n      \u001b[2mat Object.title (\u001b[22mutils&#x2F;fetchFilm.js\u001b[2m:15:28)\u001b[22m\n      \u001b[2mat Object.require (\u001b[22mcontrollers&#x2F;films.controllers.js\u001b[2m:1:23)\u001b[22m\n      \u001b[2mat Object.require (\u001b[22mroutes&#x2F;films.js\u001b[2m:2:25)\u001b[22m\n      \u001b[2mat Object.require (\u001b[22mapp.js\u001b[2m:10:21)\u001b[22m\n      \u001b[2mat Object.require (\u001b[22m\u001b[0m\u001b[36mtest&#x2F;films.test.js\u001b[39m\u001b[0m\u001b[2m:2:13)\u001b[22m\n&quot;,
+      &quot;failureMessage&quot;: &quot;  \u001b[1m● \u001b[22mTest suite failed to run\n\n    ReferenceError: title is not defined\n\n    \u001b[0m \u001b[90m 13 |\u001b[39m }\u001b[0m\n    \u001b[0m \u001b[90m 14 |\u001b[39m\u001b[0m\n    \u001b[0m\u001b[31m\u001b[1m&gt;\u001b[22m\u001b[39m\u001b[90m 15 |\u001b[39m module\u001b[33m.\u001b[39mexports \u001b[33m&#x3D;\u001b[39m fetchFilm(title)\u001b[0m\n    \u001b[0m \u001b[90m    |\u001b[39m                            \u001b[31m\u001b[1m^\u001b[22m\u001b[39m\u001b[0m\n\n      \u001b[2mat Object.title (\u001b[22mutils&#x2F;fetchFilms.js\u001b[2m:15:28)\u001b[22m\n      \u001b[2mat Object.require (\u001b[22mcontrollers&#x2F;films.controllers.js\u001b[2m:1:23)\u001b[22m\n      \u001b[2mat Object.require (\u001b[22mroutes&#x2F;films.js\u001b[2m:2:25)\u001b[22m\n      \u001b[2mat Object.require (\u001b[22mapp.js\u001b[2m:10:21)\u001b[22m\n      \u001b[2mat Object.require (\u001b[22m\u001b[0m\u001b[36mtest&#x2F;films.test.js\u001b[39m\u001b[0m\u001b[2m:2:13)\u001b[22m\n&quot;,
       &quot;leaks&quot;: false,
       &quot;numFailingTests&quot;: 0,
       &quot;numPassingTests&quot;: 0,
@@ -246,7 +246,7 @@
       &quot;testResults&quot;: []
     },
     {
-      &quot;failureMessage&quot;: &quot;  \u001b[1m● \u001b[22mTest suite failed to run\n\n    Cannot find module &#39;..&#x2F;utils&#x2F;fetchFilms&#39; from &#39;test&#x2F;fetchFilms.test.js&#39;\n\n    \u001b[0m\u001b[31m\u001b[1m&gt;\u001b[22m\u001b[39m\u001b[90m 1 |\u001b[39m \u001b[36mconst\u001b[39m fetchFilm \u001b[33m&#x3D;\u001b[39m require(\u001b[32m&#39;..&#x2F;utils&#x2F;fetchFilms&#39;\u001b[39m)\u001b[33m;\u001b[39m\u001b[0m\n    \u001b[0m \u001b[90m   |\u001b[39m                                                 \u001b[31m\u001b[1m^\u001b[22m\u001b[39m\u001b[0m\n    \u001b[0m \u001b[90m 2 |\u001b[39m\u001b[0m\n    \u001b[0m \u001b[90m 3 |\u001b[39m describe(\u001b[32m&#39;fetchFilm utility&#39;\u001b[39m\u001b[33m,\u001b[39m () \u001b[33m&#x3D;&gt;\u001b[39m {\u001b[0m\n    \u001b[0m \u001b[90m 4 |\u001b[39m   it(\u001b[32m&#39;should return movie details for a known movie&#39;\u001b[39m\u001b[33m,\u001b[39m \u001b[36masync\u001b[39m () \u001b[33m&#x3D;&gt;\u001b[39m {\u001b[0m\n\n      \u001b[2mat Resolver._throwModNotFoundError (\u001b[22mnode_modules&#x2F;jest-resolve&#x2F;build&#x2F;resolver.js\u001b[2m:427:11)\u001b[22m\n      \u001b[2mat Object.&lt;anonymous&gt; (\u001b[22m\u001b[0m\u001b[36mtest&#x2F;fetchFilms.test.js\u001b[39m\u001b[0m\u001b[2m:1:49)\u001b[22m\n&quot;,
+      &quot;failureMessage&quot;: &quot;  \u001b[1m● \u001b[22mTest suite failed to run\n\n    ReferenceError: title is not defined\n\n    \u001b[0m \u001b[90m 13 |\u001b[39m }\u001b[0m\n    \u001b[0m \u001b[90m 14 |\u001b[39m\u001b[0m\n    \u001b[0m\u001b[31m\u001b[1m&gt;\u001b[22m\u001b[39m\u001b[90m 15 |\u001b[39m module\u001b[33m.\u001b[39mexports \u001b[33m&#x3D;\u001b[39m fetchFilm(title)\u001b[0m\n    \u001b[0m \u001b[90m    |\u001b[39m                            \u001b[31m\u001b[1m^\u001b[22m\u001b[39m\u001b[0m\n\n      \u001b[2mat Object.title (\u001b[22mutils&#x2F;fetchFilms.js\u001b[2m:15:28)\u001b[22m\n      \u001b[2mat Object.&lt;anonymous&gt; (\u001b[22m\u001b[0m\u001b[36mtest&#x2F;fetchFilms.test.js\u001b[39m\u001b[0m\u001b[2m:1:49)\u001b[22m\n&quot;,
       &quot;leaks&quot;: false,
       &quot;numFailingTests&quot;: 0,
       &quot;numPassingTests&quot;: 0,
@@ -269,16 +269,7 @@
         &quot;unmatched&quot;: 0,
         &quot;updated&quot;: 0
       },
-      &quot;testExecError&quot;: {
-        &quot;code&quot;: &quot;MODULE_NOT_FOUND&quot;,
-        &quot;hint&quot;: &quot;&quot;,
-        &quot;requireStack&quot;: [
-          &quot;&#x2F;Users&#x2F;carlosgomez&#x2F;Desktop&#x2F;the-bridge&#x2F;ejercicio_API_REST_films_con_test&#x2F;test&#x2F;fetchFilms.test.js&quot;
-        ],
-        &quot;siblingWithSimilarExtensionFound&quot;: false,
-        &quot;moduleName&quot;: &quot;..&#x2F;utils&#x2F;fetchFilms&quot;,
-        &quot;_originalMessage&quot;: &quot;Cannot find module &#39;..&#x2F;utils&#x2F;fetchFilms&#39; from &#39;test&#x2F;fetchFilms.test.js&#39;&quot;
-      },
+      &quot;testExecError&quot;: {},
       &quot;testFilePath&quot;: &quot;&#x2F;Users&#x2F;carlosgomez&#x2F;Desktop&#x2F;the-bridge&#x2F;ejercicio_API_REST_films_con_test&#x2F;test&#x2F;fetchFilms.test.js&quot;,
       &quot;testResults&quot;: []
     }
@@ -342,7 +333,7 @@
   ],
   &quot;rootDir&quot;: &quot;&#x2F;Users&#x2F;carlosgomez&#x2F;Desktop&#x2F;the-bridge&#x2F;ejercicio_API_REST_films_con_test&quot;,
   &quot;runTestsByPath&quot;: false,
-  &quot;seed&quot;: 615625837,
+  &quot;seed&quot;: -790484506,
   &quot;skipFilter&quot;: false,
   &quot;snapshotFormat&quot;: {
     &quot;escapeString&quot;: false,
